name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
description:         Simple Hangman Game in Haskell
homepage:            https://github.com/skaex/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Abdulmajid Hamza
maintainer:          example@example.com
copyright:           2020 Abdulmajid Hamza 
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  data/dict.txt

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , random

library
  hs-source-dirs:      src
  exposed-modules:     Main
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , random

test-suite test
  hs-source-dirs:      test
  main-is:             Specs.hs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-tabs -fno-warn-orphans -main-is Specs
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , hangman
